<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:showIn="@layout/activity_main" tools:context=".MainActivity">

    <TextView
        android:id="@+id/admiration_pains"
        android:text="@string/admiration_pains"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="#ed0d1c"
        android:textSize="25sp"/>

    <TextView
        android:id="@+id/friday_night"
        android:text="@string/friday_night"
        android:layout_below="@id/admiration_pains"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:textColor="#42ccae"
        android:textSize="25sp" />

    <LinearLayout
        android:id="@+id/icon_container"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/friday_night"
        android:layout_marginTop="10dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_weight="1"
            android:textSize="45sp"
            android:layout_marginRight="10dp"
            android:layout_marginEnd="10dp"
            android:textColor="#9b59b6"
            android:text="@string/fa_icon_areachart"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_weight="1"
            android:textSize="45sp"
            android:layout_marginRight="10dp"
            android:layout_marginEnd="10dp"
            android:textColor="#57ab5e"
            android:text="@string/fa_icon_piechart"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_weight="1"
            android:textSize="45sp"
            android:textColor="#5980b6"
            android:text="@string/fa_icon_linechart"/>

    </LinearLayout>

</RelativeLayout>
